# akAIfe

./: .env  .gitignore  .ipynb  PORTFOLIO-DEPLOYMENT.md  README.md  VERCEL-DEPLOYMENT.md  aramain.py  client.py  env.example  index.html  main.py  mapsAPIutils.py  notes.txt  package-lock.json  package.json  pyproject.toml  start-backend.sh  start-frontend.sh  tailwind.config.ts  utils.py  vercel.json  verify-setup.sh
akaife-back/: client.py  package-lock.json  package.json  server.js
