[project]
name = "akaife-travel-advisor"
version = "0.1.0"
description = "AI-powered travel advisor with Georgian Railway integration, car rentals, and location services"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.50.0",
    "mcp[cli]>=1.7.1",
    "python-dotenv>=1.1.0",
    "googlemaps>=4.10.0",
    "fastmcp>=0.4.0",
    "pydantic>=2.0.0",
]
